@@ -1,3 +1,7 @@
+2006-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>  (tiny change)
+
+	* tramp.el (tramp-touch): Use UTC to express time.
+
 2006-05-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-register-file-name-handlers):
